Fix scroll/overflow

--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -9,6 +9,8 @@
     justify-content: center;
     z-index: 1;
 
+    overflow: hidden;
+
     background: colors.header;
 }
 
